# universal-ai-orchestrator

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  vercel-deploy.yml
agents/: __init__.py  base.py  chatgpt.py  chatgpt_agent.py  claude.py  claude_agent.py  gemini.py  gemini_agent.py
config/: __init__.py  settings.py
core/: __init__.py  notion_watcher.py  orchestrator.py  synthesis_engine.py
docs/: DEPLOY_VERCEL.md  SECRETS_MANAGEMENT.md  VERCEL_DEPLOYMENT.md
docs/plans/: 2025-11-09-ai-orchestrator-design.md
frontend/: vercel.json
frontend/app/: page.tsx
frontend/app/api/chat/: route.ts
integrations/: __init__.py  notion_client.py  notion_client_stub.py
models/: __init__.py  agent_response.py  question.py
scripts/: aggregate_fallback.py  push_github_secrets.sh  save_keyring.py  save_local_env.sh  setup.sh
tests/: __init__.py  test_aggregate_fallback.py  test_orchestrator_with_agents.py  test_smoke.py
utils/: __init__.py  logger.py  rate_limiter.py  retry.py
